# mcp-servers

./: .gitignore  gdelt_search.py  rss_search.py
mcp-gdelt/: README.md  gdelt_search_mcp.py  mcp_gdelt_colab.ipynb  mcp_gdelt_colab_overview.md  pyproject.toml
mcp-gdelt/src/mcp_gdelt/: __init__.py  config.py  logger.py  server.py  types.py
mcp-gdelt/src/mcp_gdelt/services/: __init__.py  gdelt_client.py
mcp-rss/: README.md  mcp_rss_colab.ipynb  pyproject.toml  rss_search_mcp.py
mcp-rss/src/: __init__.py  config.py  logger.py  server.py  types.py
mcp-rss/src/services/: cache.py  rss_reader.py
mcp-rss/src/utils/: content.py  date.py  http.py
mcp-unstructured/: README.md  client_test.py  colab_test.ipynb  mcp.toml  parser.py  pyproject.toml  requirements.txt  server.py
mcp-unstructured/notebooks/: colab_test.ipynb
mcp-unstructured/scripts/: run_server.py
mcp-unstructured/src/mcp_unstructured/: parser.py  server.py  tools.py
mcp-unstructured/tests/: client_test.py
